# grafica-practica5

./: CMakeLists.txt
include/: buffer.h  camera.h  data_buffer_2.h  data_buffer_3.h  drawable.h  gizmo.h  index_buffer.h  mvp_program.h  ortho_camera.h  perspective_camera.h  program.h  rectangle.h  regular_polygon.h  scene.h  texture.h  uniform_color.h
src/: CMakeLists.txt  buffer.cpp  camera.cpp  data_buffer_2.cpp  data_buffer_3.cpp  drawable.cpp  gizmo.cpp  index_buffer.cpp  main.cpp  mvp_program.cpp  ortho_camera.cpp  perspective_camera.cpp  program.cpp  rectangle.cpp  regular_polygon.cpp  scene.cpp  texture.cpp  uniform_color.cpp
src/shaders/: CMakeLists.txt  color_fragment.glsl  mvp_vertex.glsl  texture_fragment.glsl
src/textures/: CMakeLists.txt
